--- a/style.css
+++ b/style.css
@@ -1053,11 +1053,15 @@ form.newsletter input[type=text] {
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 70px;
 }
 
 .last-links li {
   list-style: none;
   display: inline-block;
   line-height: 30px;
+}
+
+.row-2 {
+  padding-bottom: 70px;
+  margin-top: 5px;
 }
